# ssd26-computer-project

./: .env  .gitignore  .step-ca-password  Makefile  README.md  docker-compose.yml
bash/: 1-reset.sh  2-pki_setup.sh  3-run.sh
client/: .dockerignore  Dockerfile  localhost-key.pem  localhost.pem  package.json  pnpm-lock.yaml  vite.config.ts
client/src/: index.css  main.tsx  routeTree.gen.ts
client/src/components/: CryptoUtils.ts
client/src/lib/: inputValidation.ts  key-store.ts  metadata.ts  utils.ts
client/src/routes/: -not-found.tsx  __root.tsx  (+7 more)
docs/tex/: report_health.tex
logger/: Dockerfile  app.py
nginx/: nginx.conf
nginx/snippets/: upstream_headers.conf
pki/: 1-reset.sh  2-pki_setup.sh  3-run.sh  ca-controller.js  ca-routes.js  docker-compose.yml
server/: Dockerfile  pyproject.toml  settings.py  urls.py
server/Common/: input_validation.py
server/accounts/: adapters.py  admin.py  models.py
server/accounts/migrations/: 0001_initial.py  0002_remove_patientrecord_data_and_more.py  0003_user_pending_add_code_user_pending_add_expiry.py  0004_user_encrypted_private_key_user_private_key_iv.py  0005_user_certificate_user_xpriv_iv.py  0006_pendingrequest.py  0007_user_signing_public_key.py  0008_remove_user_date_of_birth_remove_user_first_name_and_more.py  0009_user_dob_hmac.py  0010_doctorpatientlink_encrypted_profile.py
server/api/: ca.py  urls.py  views.py
server/common/: input_validation.py
server/webauthn/: admin.py  apps.py  models.py  urls.py  utils.py  views.py
server/webauthn/migrations/: 0001_initial.py  0002_alter_webauthncredential_options.py  0003_webauthncredential_aaguid_and_more.py  0004_authenticationlog.py
(+2 files in other folders)
